added animation and product page, fixed cpmponent

--- a/src/component/HeroSection/HeroSection.css
+++ b/src/component/HeroSection/HeroSection.css
@@ -1,13 +1,16 @@
 .hero-wrapper {
     background-image: url('/public/img/hero_img.jpg');
+    background-size: cover;
 }
 .bg-wrapper {
     background-image: url('/public/img/bg-hero.png');
+    position: relative;
 }
 
 .title, .title-text {
     color: white;
     margin: 0;
+    text-transform: uppercase;
 }
 
 .title-text {
@@ -42,8 +45,23 @@
     background-position: center;
     background-size:inherit;
     position: absolute;
-    top: 405px;
-    bottom: -290px;
-    right: 0;
-    left: 0;
+    height: 204px;
+    width: 100%;
+}
+
+.down-btn-animated {
+    position: absolute;
+    animation: moveBtnUpDown 5s infinite alternate;
+}
+
+@keyframes moveBtnUpDown {
+    0% {
+        padding-bottom: 20px;
+    }
+    20% {
+        padding-bottom: 0;
+    }
+    100% {
+
+    }
 }
