--- a/src/component/AnimatedText/AnimatedText.css
+++ b/src/component/AnimatedText/AnimatedText.css
@@ -1,8 +1,35 @@
 .running-text {
-    white-space: nowrap;
-    overflow: hidden;
-    font-size: 16px;
-    color: white;
-    font-family: 'e-Ukraine-Medium';
-    width: 1265px;
+  white-space: nowrap;
+  overflow: hidden;
+  font-size: 16px;
+  color: white;
+  font-family: 'e-Ukraine-Medium';
+  width: 1265px;
+  animation: moveLeft 10s linear infinite;
+}
+
+.animated-text-container {
+  position: relative;
+}
+
+.second-running-text {
+  white-space: nowrap;
+  overflow: hidden;
+  font-size: 16px;
+  color: white;
+  font-family: 'e-Ukraine-Medium';
+  width: 1265px;
+  animation: moveLeft 10s linear infinite;
+  animation-delay: 4.97s;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+}
+
+@keyframes moveLeft {
+  0% { transform: translateX(100%);
+    opacity: 1;
   }
+  100% { transform: translateX(-100%); 
+    opacity: 1;}
+}
