--- a/src/layout/Footer.css
+++ b/src/layout/Footer.css
@@ -60,6 +60,10 @@
     margin: 30px 0;
 }
 
+.social-link-wraper div {
+    padding-top: 30px !important;
+}
+
 .social-link {
     text-align: center;
     display: flex;
@@ -67,10 +71,19 @@
     color: white;
     font-size: 18px;
     font-weight: 100;
+    
+}
+
+.social-link svg {
+    color: #3CC4E1;
 }
 
 .footer-doc-wraper {
     color: white;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    margin-top: 10px;
 }
 
 .footer-info-wraper {
