--- a/src/component/About/About.css
+++ b/src/component/About/About.css
@@ -13,6 +13,20 @@
     right: 0;
 }
 
+.about-wraper {
+    align-items: end;
+}
+
+.about-wraper .about-img {
+    position: relative;
+	z-index: 1;
+	overflow: hidden;
+	cursor: pointer;
+    height: min-content;
+    border-radius: 10px;
+    bottom: 0;
+}
+
 .about-img {
     display: flex;
 }
@@ -20,6 +34,15 @@
 .about-img img {
     height: 400px;
     align-self: flex-end;
+    border-radius: 10px;
+    opacity: 0.7;
+    transition: opacity 0.35s, transform 0.35s;
+    transform: scale(1.1);
+}
+
+.about-wraper:hover .about-img img {
+    transform: scale(1);
+    opacity: 1;
 }
 
 .about-title {
