--- a/src/component/HeroSection/HeroSection.css
+++ b/src/component/HeroSection/HeroSection.css
@@ -1,6 +1,9 @@
 .hero-wrapper {
     background-image: url('/public/img/hero_img.jpg');
     background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .title, .title-text {
