--- a/src/component/Menu/ProductionSubMenu.css
+++ b/src/component/Menu/ProductionSubMenu.css
@@ -7,9 +7,11 @@
     top: 95px;
     width: max-content;
     background-color: rgba(28,28,28,0.8);
+    width: 100%;
 }
 
 .sub-menu-wraper button {
     font-size: 12px;
     font-family: 'e-Ukraine-Light';
+    padding: 7px 0;
 }
