--- a/src/component/Result/Result.css
+++ b/src/component/Result/Result.css
@@ -20,6 +20,23 @@
     font-size: 18px;
 }
 
+.result-card-wraper div {
+    position: relative;
+	z-index: 1;
+	overflow: hidden;
+	cursor: pointer;
+    height: min-content;
+    border-radius: 10px;
+}
+
 .result-img {
     border-radius: 10px;
+    opacity: 0.7;
+    transition: opacity 0.35s, transform 0.35s;
+    transform: scale(1.1);
+}
+
+.result-card-wraper:hover div img {
+    transform: scale(1);
+    opacity: 1;
 }
