--- a/src/component/Slider/NewsSlider.css
+++ b/src/component/Slider/NewsSlider.css
@@ -3,6 +3,27 @@
     height: 595px;
 }
 
+.news-wraper .news-img img {
+    width: calc(100% + 100px);
+    opacity: 0.7;
+    transition: opacity 0.35s, transform 0.35s;
+    transform: scale(1.2);
+}
+
+.news-wraper .news-img {
+    position: relative;
+	z-index: 1;
+	display: inline-block;
+	overflow: hidden;
+	text-align: center;
+	cursor: pointer;
+}
+
+.news-wraper:hover .news-img img {
+    transform: scale(1);
+    opacity: 1;
+}
+
 .news-slider .swiper-slide {
     text-align: center;
     font-size: 18px;
@@ -67,16 +88,6 @@
     position: relative;
 }
 
-.news-img::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: rgba(0, 0, 0, 0.3);
-}
-
 .news-item-wraper .news-item-title {
     margin-bottom: 10px;
     font-family: 'e-Ukraine-Medium';
@@ -100,10 +111,39 @@
     font-family: 'e-Ukraine-Light';
 }
 
-.news-slider .btn-wrap a span {
+.news-slider .btn-wrap .custom-arrow {
     margin-left: 20px;
+    margin-right: 5px;
+    position: relative;
 }
 
-.news-list-item:hover .news-img::before {
-    background-color: rgba(0, 0, 0, 0);
+.custom-arrow div:first-child, .custom-arrow div:last-child {
+    width: 10px;
+    height: 2px;
+    border-radius: 5px;
+    background-color: white;
+    position: absolute;
+    right: -2px;
+}
+
+.custom-arrow div:first-child {
+    bottom: 3px;
+    transform: rotate(45deg);
+}
+
+.custom-arrow div:last-child{
+    top: 3px;
+    transform: rotate(135deg);
+}
+
+.custom-arrow div:nth-child(2) {
+    width: 70px;
+    height: 2px;
+    border-radius: 5px;
+    background-color: white;
+}
+
+.btn-wrap:hover .custom-arrow div:nth-child(2) {
+    transition: 0.5s;
+    width: 50px;
 }
