--- a/src/component/Slider/ProductionSlider.css
+++ b/src/component/Slider/ProductionSlider.css
@@ -3,6 +3,39 @@
     height: 700px;
 }
 
+.production-img {
+    overflow: hidden;
+}
+
+.production-img-wraper {
+	overflow: hidden;
+	margin: 0;
+	width: 100%;
+	list-style: none;
+	text-align: center;
+}
+
+.production-img-wraper div {
+	position: relative;
+	z-index: 1;
+	display: inline-block;
+	overflow: hidden;
+	text-align: center;
+	cursor: pointer;
+}
+
+.production-img-wraper div img {
+    width: calc(100% + 100px);
+    opacity: 0.7;
+    transition: opacity 0.35s, transform 0.35s;
+    transform: scale(1.2);
+}
+
+.production-wraper:hover div img {
+    transform: scale(1);
+    opacity: 1;
+}
+
 .production-slider .swiper-slide {
     text-align: center;
     font-size: 18px;
@@ -100,8 +133,10 @@
     font-family: 'e-Ukraine-Light';
 }
 
-.production-slider .btn-wrap a span {
+.production-slider .btn-wrap .custom-arrow {
     margin-left: 20px;
+    margin-right: 5px;
+    position: relative;
 }
 
 .production-list-item:hover .production-img::before {
