--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -39,6 +39,7 @@ h1, h2, h3, h4, h5, h6, p, a {
     margin: 0;
     text-decoration: none;
     color: white;
+    font-family: "e-Ukraine-Medium";
 }
 
 .container {
