--- a/src/component/Menu/ProductionSubMenu.css
+++ b/src/component/Menu/ProductionSubMenu.css
@@ -15,3 +15,11 @@
     font-family: 'e-Ukraine-Light';
     padding: 7px 0;
 }
+
+.sub-menu-text {
+    border-bottom: 1px solid rgba(255, 255, 255, 0);
+}
+
+.sub-menu-text:hover {
+    border-bottom: 1px solid white;
+}
