--- a/src/component/Advantages/Advantages.css
+++ b/src/component/Advantages/Advantages.css
@@ -9,7 +9,16 @@
 
 .advantage-item {
     border: 1px solid #141A29;
+    border-top: none;
     padding: 15px;
+}
+
+.advantage-item:first-child {
+    border-right: none;
+}
+
+.advantage-item:nth-child(2) {
+    border-right: none;
 }
 
 .advantages-title h3 {
