--- a/src/component/HeroSection/HeroSection.css
+++ b/src/component/HeroSection/HeroSection.css
@@ -1,9 +1,24 @@
 .hero-wrapper {
-    background-image: url('/public/img/hero_img.jpg');
+    /* background-image: url('/img/hero_img.jpg');
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
-    background-repeat: no-repeat;
+    background-repeat: no-repeat; */
+    position: relative;
+    height: 100vh; 
+    width: 100%; 
+    overflow: hidden;
+}
+
+.hero-video {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Забезпечує покриття контейнера відео */
+    transform: translate(-50%, -50%); /* Центрує відео */
+    /* z-index: -1; */
 }
 
 .title, .title-text {
