--- a/src/component/Result/Result.css
+++ b/src/component/Result/Result.css
@@ -1,30 +1,27 @@
+.result-title {
+    border-left: 1px solid #141A29;
+}
+
+.result-wraper {
+    border-top: 1px solid #141A29;
+    border-bottom: 1px solid #141A29;
+}
+
 .result-item {
     border: 1px solid #141A29;
+    border-top: none;
     padding: 15px;
 }
 
 .result-item:first-child {
-    border-left: none;
     border-right: none;
 }
 
-.result-item:nth-child(3) {
-    border-left: none;
-    border-right: none;
-}
-
-.result-item:nth-child(4) {
-    border-left: none;
-    border-right: none;
-}
-
-.result-item:last-child {
-    border-left: none;
+.result-item:nth-child(2) {
     border-right: none;
 }
 
 .result-title h3 {
-    text-align: end;
     font-family: "Gerhaus";
     margin: 15px;
     font-size: 60px;
