--- a/src/component/HeroSection/HeroSection.css
+++ b/src/component/HeroSection/HeroSection.css
@@ -1,13 +1,22 @@
 .hero-wrapper {
-    /* background-image: url('/img/hero_img.jpg');
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat; */
     position: relative;
     height: 100vh; 
     width: 100%; 
     overflow: hidden;
+}
+
+.hero-wrapper .title-text-wraper {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    position: relative;
+    padding-right: 23px;
+}
+
+.hero-wrapper > div {
+    display: flex;
+    align-items: center;
+    height: 100vh;
 }
 
 .hero-video {
@@ -16,9 +25,8 @@
     left: 50%;
     width: 100%;
     height: 100%;
-    object-fit: cover; /* Забезпечує покриття контейнера відео */
-    transform: translate(-50%, -50%); /* Центрує відео */
-    /* z-index: -1; */
+    object-fit: cover; 
+    transform: translate(-50%, -50%); 
 }
 
 .title, .title-text {
