--- a/src/layout/Footer.css
+++ b/src/layout/Footer.css
@@ -4,7 +4,7 @@
 }
 
 .footer-item {
-    padding: 15px;
+    padding: 15px 15px 30px;
 }
 
 .footer-first-menu {
@@ -43,7 +43,7 @@
     color: #141A29;
     font-size: 25px;
     font-weight: 500;
-   margin-bottom: 15px;
+    margin-bottom: 15px;
 }
 
 .footer-item-contact div {
@@ -53,11 +53,10 @@
 }
 
 .footer-contact {
-    margin-bottom: 10px;
     color: #141A29;
     font-size: 16px;
     font-weight: 500;
-    line-height: 18px;
+    line-height: 20px;
 }
 
 .footer-contact:hover {
@@ -75,7 +74,7 @@
 .footer-info {
     display: flex;
     flex-direction: column;
-    gap: 12px;
+    gap: 16px;
 }
 
 .footer-info-wraper div {
@@ -85,7 +84,6 @@
 
 .social-link {
     display: flex;
-
     height: 54px;
     width: 54px;
 }
@@ -116,6 +114,7 @@
 
 .footer-menu-item-submenu button a {
     color: #141A29;
+    height: 28px;
 }
 
 .footer-menu-item-submenu button:hover a {
