--- a/src/component/Partners/Partners.css
+++ b/src/component/Partners/Partners.css
@@ -49,3 +49,57 @@
 .partners-item:hover .partners-img img {
     transform: scale(1.1);
 }
+
+@media (max-width: 1024px) {
+    .partners-title {
+        border-left: none;
+        text-align: center;
+    }
+
+    .partners-title h3 {
+        font-size: 50px;
+        letter-spacing: 4px;
+    }
+
+    .partners-item {
+        padding-top: 10px;
+        padding-bottom: 20px;
+        flex-direction: column; 
+        text-align: center;
+    }
+
+    .partners-img {
+        height: 100px;
+    }
+
+    .partners-img img {
+        transform: scale(1);
+    }
+}
+
+@media (max-width: 375px) {
+    .partners-title {
+        border-left: none;
+        text-align: center;
+    }
+
+    .partners-title h3 {
+        font-size: 30px; 
+        letter-spacing: 2px;
+    }
+
+    .partners-item {
+        padding-top: 5px;
+        padding-bottom: 10px;
+        flex-direction: column; /* Елементи розташовані вертикально */
+        text-align: center;
+    }
+
+    .partners-img {
+        height: 80px;
+    }
+
+    .partners-img img {
+        transform: scale(1);
+    }
+}
