--- a/src/component/HeroSection/HeroSection.css
+++ b/src/component/HeroSection/HeroSection.css
@@ -98,3 +98,55 @@
         padding-bottom: 35px;
     }
 }
+
+@media (max-width: 1024px) {
+    .hero-wrapper {
+      height: 90vh;
+    }
+  
+    .title-text {
+      font-size: 90px;
+      line-height: 90px;
+      letter-spacing: 5px;
+    }
+  
+    .title {
+      font-size: 20px;
+      line-height: 25px;
+    }
+  }
+
+  /* Адаптивність для мобільних */
+@media (max-width: 375px) {
+    .hero-wrapper {
+      height: 100vh;
+    }
+  
+    .title-text {
+      height: 36px;
+      font-size: 30px;
+      line-height: 50px;
+      letter-spacing: 2px;
+      padding: 0 10px; /* Додатковий відступ */
+    }
+  
+    .title {
+      width: 246px;
+      font-size: 16px;
+      line-height: 20px;
+      padding: 0 10px; /* Додатковий відступ */
+    }
+  
+    .down-btn-animated {
+      bottom: 10px;
+    }
+  
+    .animated-img-wraper {
+      width: 40px;
+      height: 40px;
+    }
+  
+    .animated-img {
+      width: 10px;
+    }
+  }
