--- a/src/component/News/News.css
+++ b/src/component/News/News.css
@@ -42,3 +42,53 @@
     color: #141A29;
     border: 1px solid #141A29;
 }
+
+@media (max-width: 1024px) {
+    .news-title {
+        border-left: none;
+        text-align: center;
+    }
+
+    .news-title h3 {
+        font-size: 50px;
+        letter-spacing: 4px;
+    }
+
+    .news-array-wraper {
+        margin: 10px;
+    }
+
+    .news-btn {
+        padding: 10px 30px;
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 375px) {
+    .news-title {
+        border-left: none;
+        text-align: center;
+    }
+
+    .news-title h3 {
+        font-size: 30px;
+        letter-spacing: 2px;
+    }
+
+    .news-array-wraper {
+        margin: 5px;
+        border-left: none;
+        border-right: none;
+    }
+
+    .news-btn {
+        padding: 8px 20px;
+        font-size: 12px;
+        line-height: 20px;
+    }
+
+    .news-array-btn {
+        flex-direction: column;
+        gap: 10px;
+    }
+}
