added mobile width

--- a/src/component/About/About.css
+++ b/src/component/About/About.css
@@ -199,6 +199,36 @@
     }
 }
 
+@media (max-width: 545px) {
+    .about {
+        margin-bottom: 10px;
+        padding: 5px;
+    }
+
+    .about-title {
+        border-left: none;
+        text-align: start;
+    }
+
+    .about-title h3 {
+        font-size: 30px;
+        line-height: 30px;
+        letter-spacing: 2px;
+    }
+
+    .about-img-wraper {
+        margin-bottom: 15px;
+    }
+
+    .about-video-wraper {
+        height: 200px;
+    }
+
+    .about-wraper p {
+        font-size: 16px;
+    }
+}
+
 @media (max-width: 375px) {
     .about {
         margin-bottom: 10px;
