--- a/src/component/Contacts/Contacts.css
+++ b/src/component/Contacts/Contacts.css
@@ -104,6 +104,53 @@
     }
 }
 
+@media (max-width: 545px) {
+.mobile-contact-wraper {
+    padding-left: 16px;
+    padding-right: 16px;
+}
+
+.contact-item {
+    margin-bottom: 0;
+    flex-direction: column;
+    width: 100%;
+}
+
+    .contacts-title {
+        text-align: center;
+        border-left: none;
+    }
+
+    .contacts-title h3 {
+        font-size: 30px; /* Ще менший розмір для мобільних */
+        line-height: 40px;
+        letter-spacing: 2px;
+    }
+
+    .contact-info {
+        flex-direction: column;
+        padding: 5px;
+        line-height: 18px;
+    }
+
+    .contact-icon {
+        width: 100%;
+        height: auto;
+    }
+
+    .contact-info p {
+        font-size: 20px;
+    }
+
+    .contact-icon, .contact-info {
+        padding: 20px 10px;
+    }
+
+    .contact-info .contact-text {
+        font-size: 16px;
+    }
+}
+
 @media (max-width: 375px) {
 .mobile-contact-wraper {
     padding-left: 16px;
