--- a/src/component/Advantages/Advantages.css
+++ b/src/component/Advantages/Advantages.css
@@ -47,3 +47,9 @@
     content: url('/public/img/advantages_icon3.svg');
     left: calc(50% - 18.5px);
 }
+
+@media (max-width: 545px) {
+    .advantages-items-wraper {
+        gap: 80px;
+    }
+}
