--- a/src/component/Contacts/Contacts.css
+++ b/src/component/Contacts/Contacts.css
@@ -73,9 +73,9 @@
     }
 
     .contacts-title h3 {
-        font-size: 50px; /* Зменшення розміру шрифту */
+        font-size: 50px; 
         line-height: 60px;
-        letter-spacing: 4px; /* Зменшення відстані між літерами */
+        letter-spacing: 4px; 
     }
 
     .contact-info {
@@ -122,7 +122,7 @@
     }
 
     .contacts-title h3 {
-        font-size: 30px; /* Ще менший розмір для мобільних */
+        font-size: 30px;
         line-height: 40px;
         letter-spacing: 2px;
     }
@@ -169,7 +169,7 @@
     }
 
     .contacts-title h3 {
-        font-size: 30px; /* Ще менший розмір для мобільних */
+        font-size: 30px;
         line-height: 40px;
         letter-spacing: 2px;
     }
