--- a/src/component/News/News.css
+++ b/src/component/News/News.css
@@ -65,6 +65,10 @@
 }
 
 @media (max-width: 545px) {
+    .news-array-wraper {
+        width: 100%;
+    }
+
     .news-title {
         border-left: none;
         text-align: center;
