--- a/src/component/Slider/ProductionListItem.css
+++ b/src/component/Slider/ProductionListItem.css
@@ -63,3 +63,23 @@
 .production-img {
     position: relative;
 }
+
+@media (max-width: 545px) {
+    .production-img-wraper {
+        height: auto;
+    }
+    .prodaction-mobile {
+        width: 100%;
+        border-bottom: 1px solid #2B3857;
+    }
+    .prodaction-mobile:nth-child(5) {
+        border-bottom: none;
+    }
+    .porduction-item-wraper .production-item-title a {
+        font-weight: 500;
+        font-size: 18px;
+    }
+    .production-img {
+        display: block;
+    }
+}
